Fixes for mapa on smaller devices

--- a/web/static/web/css/mapa.css
+++ b/web/static/web/css/mapa.css
@@ -305,13 +305,11 @@ html, body {
     height: 100vh;
     min-height: 0;
     min-width: 0;
-    /* position: relative; */
   }
   #tituloMapa {
     height: auto;
     min-height: 24px;
     padding: 8px 0;
-    font-size: 22px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.10);
@@ -319,7 +317,7 @@ html, body {
     z-index: 2;
   }
   #tituloMapa > p {
-    font-size: 20px;
+    font-size: 24px;
     padding: 0.3em 0 0.1em 0;
   }
   .mapa-content-area {
@@ -330,7 +328,7 @@ html, body {
   }
   #map {
     height: 100vh;
+    margin-top: 0;
     width: 100%; 
   }
 }
-
